chore: Added IDE helper

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 .env
 .env.backup
 .idea
+.phpstorm.meta.php
 .phpunit.result.cache
+_ide_helper.php
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
