--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:meta"
-        ]
+        ],
+        "test": "vendor/bin/phpunit"
     }
 }
