--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "barryvdh/laravel-ide-helper": "^2.9",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^6.11",
         "laravel/sail": "^1.0.1",
         "matt-allan/laravel-code-style": "^0.6.0",
         "mockery/mockery": "^1.4.2",
