--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,8 @@
 {
-  "extends": [
-    "config:base"
-  ]
+    "extends": [
+        "config:base",
+        "schedule:weekends",
+        ":automergeMinor"
+    ],
+    "rangeStrategy": "replace"
 }
