chore: Updated renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,8 +1,7 @@
 {
     "extends": [
         "config:base",
-        "schedule:weekends",
-        ":automergeMinor"
-    ],
-    "rangeStrategy": "replace"
+        ":automergeMinor",
+        ":autodetectPinVersions"
+    ]
 }
