chore: Updated renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,8 @@
     "extends": [
         "config:base",
         ":automergeMinor",
-        ":autodetectPinVersions"
-    ]
+        ":semanticCommits",
+        ":rebaseStalePrs"
+    ],
+    "rangeStrategy": "widen"
 }
