chore: Updated renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,7 +3,8 @@
         "config:base",
         ":automergeMinor",
         ":semanticCommits",
+        ":semanticCommitScopeDisabled",
+        ":preserveSemverRanges",
         ":rebaseStalePrs"
-    ],
-    "rangeStrategy": "widen"
+    ]
 }
