--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "matt-allan/laravel-code-style": "^0.6.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "php-http/guzzle7-adapter": "^0.1.1",
+        "phpunit/phpunit": "^9.3.3",
+        "rpkamp/mailhog-client": "^0.5.2"
     },
     "config": {
         "optimize-autoloader": true,
