--- a/package.json
+++ b/package.json
@@ -11,8 +11,20 @@
     },
     "devDependencies": {
         "axios": "0.21.1",
+        "husky": "4.3.8",
         "laravel-mix": "6.0.10",
+        "lint-staged": "10.5.3",
         "lodash": "4.17.20",
-        "postcss": "8.2.4"
+        "postcss": "8.2.4",
+        "prettier": "2.2.1"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,css,scss,md}": "prettier --write",
+        "*.php": "vendor/bin/php-cs-fixer fix --config=.php_cs"
     }
 }
