chore: Updated renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,11 @@
 {
     "extends": [
         "config:base",
+        ":automergeBranch",
         ":automergeMinor",
         ":semanticCommits",
         ":semanticCommitScopeDisabled",
+        ":maintainLockFilesWeekly",
         ":rebaseStalePrs"
     ]
 }
