--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "axios": "0.21.1",
@@ -17,11 +18,6 @@
         "lodash": "4.17.21",
         "postcss": "8.2.9",
         "prettier": "2.2.1"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
     },
     "lint-staged": {
         "*.{js,css,scss,md}": "prettier --write",
