chore: Updated renovate schedule

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,11 +1,12 @@
 {
     "extends": [
         "config:base",
+        "schedule:monthly",
         ":automergeBranch",
         ":automergeMinor",
         ":semanticCommits",
         ":semanticCommitScopeDisabled",
-        ":maintainLockFilesWeekly",
+        ":maintainLockFilesMonthly",
         ":rebaseStalePrs"
     ]
 }
