--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "laravel-mix": "6.0.19",
         "lint-staged": "11.0.0",
         "lodash": "4.17.21",
-        "postcss": "8.2.15",
-        "prettier": "2.3.0"
+        "prettier": "2.3.0",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.13",
+        "sass-loader": "^11.0.1"
     },
     "lint-staged": {
         "*.{js,css,scss,md}": "prettier --write",
