--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "prettier": "2.3.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.13",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "ts-loader": "^9.2.1",
+        "typescript": "^4.2.4"
     },
     "lint-staged": {
         "*.{js,css,scss,md}": "prettier --write",
