--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
         "laravel-mix": "6.0.19",
         "lint-staged": "11.0.0",
         "prettier": "2.3.0",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.13",
-        "sass-loader": "^11.0.1",
-        "ts-loader": "^9.2.1",
-        "typescript": "^4.2.4",
-        "vue-loader": "^16.1.0",
-        "webpack": "^5.37.1"
+        "resolve-url-loader": "4.0.0",
+        "sass": "1.32.13",
+        "sass-loader": "11.1.1",
+        "ts-loader": "9.2.1",
+        "typescript": "4.2.4",
+        "vue-loader": "16.2.0",
+        "webpack": "5.37.1"
     },
     "lint-staged": {
         "*.{js,css,scss,md}": "prettier --write",
