--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@testing-library/vue": "6.4.2",
+        "@tsconfig/recommended": "^1.0.1",
         "@types/jest": "26.0.23",
         "@vue/compiler-sfc": "3.0.11",
         "axios": "0.21.1",
