--- a/.env.ci
+++ b/.env.ci
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql # Docker host
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=hoarder_laravel
-DB_USERNAME=laravel
-DB_PASSWORD=password
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -20,14 +20,14 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=memcached # Docker host
+MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis # Docker host
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog # Docker host
+MAIL_HOST=127.0.0.1
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
