--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Prepare the Environment
-        run: cp .env.example .env
+        run: cp .env.ci .env
 
       - name: Get Composer Cache Directory
         id: composer-cache
