--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     },
     "devDependencies": {
         "@testing-library/vue": "6.4.2",
-        "@tsconfig/recommended": "^1.0.1",
+        "@tsconfig/recommended": "1.0.1",
         "@types/jest": "26.0.23",
         "@types/uuid": "8.3.0",
         "@vue/compiler-sfc": "3.0.11",
@@ -28,14 +28,14 @@
         "lint-staged": "11.0.0",
         "prettier": "2.3.0",
         "resolve-url-loader": "4.0.0",
-        "sass": "1.32.13",
+        "sass": "1.34.0",
         "sass-loader": "11.1.1",
         "ts-jest": "26.5.6",
-        "ts-loader": "9.2.1",
-        "typescript": "4.2.4",
+        "ts-loader": "9.2.2",
+        "typescript": "4.3.2",
         "vue-jest": "5.0.0-alpha.9",
         "vue-loader": "16.2.0",
-        "webpack": "5.37.1"
+        "webpack": "5.38.1"
     },
     "lint-staged": {
         "*.{js,css,scss,md}": "prettier --write",
