--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,8 @@ services:
             - sail
         depends_on:
             - mysql
-            # - pgsql
             - redis
             - selenium
-    selenium:
-         image: 'selenium/standalone-chrome'
-         volumes:
-             - '/dev/shm:/dev/shm'
-         networks:
-             - sail
     mysql:
         image: 'mysql:8.0'
         ports:
@@ -43,20 +36,9 @@ services:
         networks:
             - sail
         healthcheck:
-          test: ["CMD", "mysqladmin", "ping"]
-#    pgsql:
-#        image: postgres:13
-#        ports:
-#            - '${FORWARD_DB_PORT:-5432}:5432'
-#        environment:
-#            PGPASSWORD: '${DB_PASSWORD:-secret}'
-#            POSTGRES_DB: '${DB_DATABASE}'
-#            POSTGRES_USER: '${DB_USERNAME}'
-#            POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
-#        volumes:
-#            - 'sailpostgresql:/var/lib/postgresql/data'
-#        networks:
-#            - sail
+          test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+          retries: 3
+          timeout: 5s
     redis:
         image: 'redis:alpine'
         ports:
@@ -67,12 +49,8 @@ services:
             - sail
         healthcheck:
           test: ["CMD", "redis-cli", "ping"]
-    # memcached:
-    #     image: 'memcached:alpine'
-    #     ports:
-    #         - '11211:11211'
-    #     networks:
-    #         - sail
+          retries: 3
+          timeout: 5s
     mailhog:
         image: 'mailhog/mailhog:latest'
         ports:
@@ -80,13 +58,17 @@ services:
             - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
         networks:
             - sail
+    selenium:
+       image: 'selenium/standalone-chrome'
+       volumes:
+            - '/dev/shm:/dev/shm'
+       networks:
+           - sail
 networks:
     sail:
         driver: bridge
 volumes:
     sailmysql:
         driver: local
-#    sailpostgresql:
-#        driver: local
     sailredis:
         driver: local
