--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     },
     "dependencies": {
         "uuid": "8.3.2",
-        "vue": "3.0.11"
+        "vue": "2.6.13"
     },
     "devDependencies": {
-        "@testing-library/vue": "6.4.2",
+        "@testing-library/vue": "5.6.2",
         "@tsconfig/recommended": "1.0.1",
         "@types/jest": "26.0.23",
         "@types/uuid": "8.3.0",
-        "@vue/compiler-sfc": "3.0.11",
         "axios": "0.21.1",
         "husky": "6.0.0",
         "jest": "26.6.3",
@@ -33,8 +32,8 @@
         "ts-jest": "26.5.6",
         "ts-loader": "9.2.2",
         "typescript": "4.3.2",
-        "vue-jest": "5.0.0-alpha.9",
-        "vue-loader": "16.2.0",
+        "vue-jest": "3.0.7",
+        "vue-loader": "15.9.7",
         "webpack": "5.38.1"
     },
     "lint-staged": {
