--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     },
     "dependencies": {
         "uuid": "8.3.2",
-        "vue": "2.6.13"
+        "vue": "2.6.13",
+        "vue-router": "3.5.1"
     },
     "devDependencies": {
         "@testing-library/vue": "5.6.2",
