--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dependencies": {
         "uuid": "8.3.2",
         "vue": "2.6.13",
-        "vue-router": "3.5.1"
+        "vue-router": "3.5.1",
+        "vuex": "3.6.2"
     },
     "devDependencies": {
         "@testing-library/vue": "5.6.2",
