--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "test": "npx jest"
     },
     "dependencies": {
+        "storage-factory": "0.2.0",
         "uuid": "8.3.2",
         "vue": "2.6.13",
         "vue-router": "3.5.1",
@@ -36,7 +37,7 @@
         "typescript": "4.3.2",
         "vue-jest": "3.0.7",
         "vue-loader": "15.9.7",
-        "vue-template-compiler": "^2.6.13",
+        "vue-template-compiler": "2.6.13",
         "webpack": "5.38.1"
     },
     "lint-staged": {
